--- a/index.html
+++ b/index.html
@@ -339,45 +339,16 @@
     <!-- Donation Modal -->
     <div id="donationModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Donate Materials</h2>
+            <span class="close" id="closeDonationModal">&times;</span>
+            <h2>Contribute to Goonj</h2>
             <form id="donationForm">
-                <div class="form-group">
-                    <label for="donorName">Full Name</label>
-                    <input type="text" id="donorName" required>
-                </div>
-                <div class="form-group">
-                    <label for="donorEmail">Email</label>
-                    <input type="email" id="donorEmail" required>
-                </div>
-                <div class="form-group">
-                    <label for="donorPhone">Phone Number</label>
-                    <input type="tel" id="donorPhone" required>
-                </div>
-                <div class="form-group">
-                    <label for="materialType">Type of Materials</label>
-                    <select id="materialType" required>
-                        <option value="">Select material type</option>
-                        <option value="clothes">Clothes</option>
-                        <option value="books">Books & Stationery</option>
-                        <option value="household">Household Items</option>
-                        <option value="toys">Toys</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="quantity">Estimated Quantity</label>
-                    <input type="text" id="quantity" placeholder="e.g., 2 bags, 10 books" required>
-                </div>
-                <div class="form-group">
-                    <label for="pickupAddress">Pickup Address</label>
-                    <textarea id="pickupAddress" rows="3" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="preferredDate">Preferred Pickup Date</label>
-                    <input type="date" id="preferredDate" required>
-                </div>
-                <button type="submit" class="submit-btn">Schedule Pickup</button>
+                <label for="donorName">Name:</label>
+                <input type="text" id="donorName" name="donorName" required>
+                <label for="donorEmail">Email:</label>
+                <input type="email" id="donorEmail" name="donorEmail" required>
+                <label for="donationAmount">Amount (INR):</label>
+                <input type="number" id="donationAmount" name="donationAmount" min="1" required>
+                <button type="submit">Donate</button>
             </form>
         </div>
     </div>
